truffle/src/com.oracle.truffle.sl.test/src/tests/error/TypeError02.sl
function main() {  
  if ("4") { }  
}  
